<resources>
    <string name="app_name">TheBillCalculator</string>
    <string name="amount">Amount</string>
    <string name="pax">Num Of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="hintDiscount">Enter discount here</string>
    <string name="hintPax">Enter Number of Pax here</string>
    <string name="hintAmount">Enter amount here</string>
    <string name="no_reset">No Reset</string>
    <string name="no_split">No Split</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
    <string name="total_bill">Total Bill: $</string>
    <string name="each_pays">Each Pays: $</string>
    <string name="reset">Reset</string>
    <string name="split">Split</string>
</resources>